--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -1,5 +1,7 @@
 body {
   font-family: $varela;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .mbl {
